# bif-ocr-backend

./: .env.example  .gitignore  README.md  pyproject.toml
app/: config.py  database.py  enums.py  main.py
app/core/: deps.py  security.py
app/models/: __init__.py  usage_log.py  user.py
app/routers/: auth.py  usage_logs.py
app/schemas/: auth.py  usage_log.py
app/services/: openai_service.py
scripts/: deploy.sh  init_db.py  run.sh  stop.sh
