[project]
name = "bif-ocr-backend"
version = "0.1.0"
description = "BIF-OCR 백엔드 — 경계선 지능 아동을 위한 OCR 기반 텍스트 변환 서비스"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.36",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.6.1",
    "python-multipart>=0.0.12",
    "bcrypt>=4.2.0",
    "python-jose[cryptography]>=3.3.0",
    "openai>=1.54.0",
    "python-dotenv>=1.0.1",
    "pypdfium2>=4.30.0",
    "pillow>=10.4.0",
]

[dependency-groups]
dev = [
    "ruff>=0.7.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
